# genai-engineering-thailand.github.io

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci-main.yml  main.yml
awesome_curation/: index.html
docs/: awesome_curation.md  index.md
docs/knowledge-sharing/: content_index.md
docs/knowledge-sharing/0 - Self-hosted LLM on GCP/: README.md
docs/knowledge-sharing/1 - PDF-to-Text - A nightmare that never ends/: README.md
docs/knowledge-sharing/2 - Introduction to Ollama/: README.md
docs/knowledge-sharing/3 - Build AI App with Vercel SDK/: README.md
docs/knowledge-sharing/4 - Monitoring and Observability in LLM Application/: README.md
docs/knowledge-sharing/5 - Optimizing LLM with LoRA/: README.md
docs/knowledge-sharing/6 - Automate Data Labeling Task With LLM-based Agentic AI/: README.md
docs/knowledge-sharing/6 - Automate Data Labelling Task With LLM-based Agentic AI/: README.md
docs/knowledge-sharing/6 - Automate Data Labelling Task With LLM-based Agentic AI/material/data_labeler_llm_agent/: README.md  agent_llm.ipynb  google_category.txt  merchant_name.csv  pyproject.toml
docs/knowledge-sharing/7 - Deploy Your LLM with Databricks and MLflow/: README.md
docs/knowledge-sharing/9 - Binding: Language-Image/: README.md
knowledge-sharing/#0 - Self-hosted LLM on GCP/: README.md
knowledge-sharing/0 - Self-hosted LLM on GCP/: index.html
knowledge-sharing/1 - PDF-to-Text - A nightmare that never ends/: index.html
knowledge-sharing/2 - Introduction to Ollama/: index.html
knowledge-sharing/3 - Build AI App with Vercel SDK/: index.html
knowledge-sharing/4 - Monitoring and Observability in LLM Application/: index.html
knowledge-sharing/4 - Monitoring and Observability in LLM Application/material/demo-langfuse/chat-api/: eval_dataset.py  index.html  main.py  pyproject.toml
knowledge-sharing/5 - Optimizing LLM with LoRA/: index.html
knowledge-sharing/6 - Automate Data Labeling Task With LLM-based Agentic AI/: index.html
knowledge-sharing/6 - Automate Data Labelling Task With LLM-based Agentic AI/: index.html
knowledge-sharing/content_index/: index.html
search/: search_index.json
site/: index.html
site/awesome_curation/: index.html
site/search/: search_index.json
(+80 files in other folders)
