[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["RTae"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
unstructured = "^0.12.4"
shortuuid = "^1.0.11"
pypdf = "^4.0.1"
pysqlite3-binary = { version = ">=0.5.2", platform = 'linux' }
ecs-logging = "^2.1.0"
langfuse = "^2.36.1"
dynaconf = "^3.2.5"
uptrain = "^0.7.1"
rouge-score = "^0.1.2"
llm-guard = "^0.3.14"
xmltodict = "^0.13.0"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.10"
langchain-chroma = "^0.1.1"
selenium = "^4.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
